Two minor fixes to the dropdown "More" button in display: attached superfish and removed a 1px gap that was making difficult to reach the dropdown in certain browsers

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2287,7 +2287,7 @@ ul.quickbuttons li.inline_mod_check {
 }
 .quickbuttons li.post_options ul {
 	position: absolute;
-	top: 2.1em;
+	top: 2em;
 	right: -1px;
 	z-index: -1;
 	min-width: 10em;
